--- a/src/app/pages/Contact/Contact.scss
+++ b/src/app/pages/Contact/Contact.scss
@@ -19,7 +19,7 @@
         .tittle-image {
             width: 100%;
             height: 200px;
-            height: 300px;
+            height: auto;
             display: block;
         }
     }
@@ -113,12 +113,12 @@
     // Mobile (320px - 480px)
     @media (max-width: 480px) {
         width: 95%;
-        margin-top: 50px;
+        margin-top: 40px;
 
         .contact-tittle-container {
             .contact__title {
                 font-size: 1.5rem;
-                padding: 30px 20px;
+                padding: 60px 20px;
             }
         }
 
@@ -147,7 +147,6 @@
     // Tablet (481px - 768px)
     @media (min-width: 481px) and (max-width: 768px) {
         width: 90%;
-        margin-top: 60px;
 
         .contact-tittle-container {
             .contact__title {
@@ -173,7 +172,6 @@
     // Laptop (769px - 1024px)
     @media (min-width: 769px) and (max-width: 1024px) {
         width: 85%;
-        margin-top: 70px;
 
         &__card {
             max-width: calc(33.333% - 1rem);
