--- a/src/app/components/Footer/Footer.scss
+++ b/src/app/components/Footer/Footer.scss
@@ -1,6 +1,6 @@
 // Footer.scss
 .footer {
-  background-color: #457bf9;
+  background-color: var(--primary-color);
   padding: 2rem 0;
   text-align: center;
   color: #fff;
