--- a/src/app/components/Login/Login.scss
+++ b/src/app/components/Login/Login.scss
@@ -49,7 +49,7 @@
             margin-bottom: 0.5rem;
 
             .log-tittle {
-              color: #3f7ded;
+              color: var(--primary-color);
             }
           }
 
@@ -81,7 +81,7 @@
               transition: border-color 0.3s;
 
               &:focus {
-                border-color: #3f7ded;
+                border-color: var(--secondary-color);
               }
 
               &.input-error {
@@ -103,7 +103,7 @@
                 right: 0.75rem;
                 transform: translateY(-50%);
                 cursor: pointer;
-                color: #3f7ded;
+                color: var(--secondary-color);
               }
             }
 
@@ -131,7 +131,7 @@
             width: 100%;
             padding: 0.75rem;
             border-radius: 0.5rem;
-            background-color: #3f7ded;
+            background-color: var(--primary-color);
             color: white;
             border: none;
             font-weight: 600;
@@ -140,7 +140,7 @@
             transition: background-color 0.3s;
 
             &:hover {
-              background-color: #2f65d3;
+              background-color: var(--secondary-color);
             }
           }
         }
