--- a/src/app/components/Signup/Signup.scss
+++ b/src/app/components/Signup/Signup.scss
@@ -63,7 +63,7 @@
               transition: border-color 0.3s;
 
               &:focus {
-                border-color: #3f7ded;
+                border-color: var(--secondary-color);
                 outline: none;
               }
 
@@ -106,7 +106,7 @@
             .btn {
               width: 100%;
               padding: 0.75rem;
-              background-color: #3f7ded;
+              background-color: var(--primary-color);
               color: white;
               border: none;
               border-radius: 0.5rem;
@@ -116,7 +116,7 @@
               transition: background-color 0.3s;
 
               &:hover {
-                background-color: #2f65d3;
+                background-color: var( --secondary-color);
               }
 
               &:disabled {
