--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 // Variables
-$primary-color: #ffffff;
 $highlight-color: #2F80ED;
 $hover-color: #5751e1;
 $transition-speed: 0.3s;
@@ -38,9 +37,8 @@ html {
 
 :root {
   --text-color: #000000;
-  --text--head-color: #2c5282;
-
-  --primary-color: #2F80ED;
+  --primary-color: #2c5282;
+  --secondary-color: #4277b8;
   --white: #ffffff;
   --sidemenu-bg: #ffffff;
   --sidemenu-item-color: #ff0000;
@@ -132,10 +130,6 @@ body.menu-open::after {
 }
 
 
-// Variables
-$primary-color: #0070f3;
-$secondary-color: #005bb5;
-
 $text-color: #222;
 $light-bg: #f9f9f9;
 $card-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
@@ -221,7 +215,7 @@ $card-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
       animation: fadeIn 1s ease-out 0.2s both;
 
       span {
-        color: $secondary-color;
+        color: var(--secondary-color);
         display: inline-block;
       }
     }
@@ -259,13 +253,13 @@ $card-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
     animation: fadeIn 1s ease-out 0.6s both;
 
     &.primary {
-      background-color: $primary-color;
+      background-color: var(--primary-color);
       color: white;
       position: relative;
       overflow: hidden;
 
       &:hover {
-        background-color: $secondary-color;
+        background-color: var(--secondary-color);
         transform: translateY(-3px);
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
       }
@@ -319,7 +313,7 @@ $card-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
 
         .sub-title {
           font-size: 1rem;
-          color: $primary-color;
+          color: var(--primary-color);
           margin-bottom: 0.5rem;
           font-weight: 600;
           animation: fadeIn 0.8s ease-out 0.2s both;
@@ -459,7 +453,7 @@ $card-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
             left: 0;
             width: 0;
             height: 2px;
-            background: $primary-color;
+            background: var(--primary-color);
             transition: width 0.3s ease;
           }
         }
@@ -527,7 +521,7 @@ $card-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
 
         &:hover .icon-service svg {
           transform: rotate(15deg) scale(1.2);
-          color: $secondary-color;
+          color: var(--secondary-color);
         }
 
         .service-title {
@@ -545,7 +539,7 @@ $card-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
         }
 
         .service-link {
-          color: $primary-color;
+          color: var(--primary-color);
           font-weight: 600;
           text-decoration: none;
           font-size: 0.9rem;
@@ -560,7 +554,7 @@ $card-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
             left: 0;
             width: 0;
             height: 2px;
-            background: $primary-color;
+            background: var(--primary-color);
             transition: width 0.3s ease;
           }
 
@@ -625,7 +619,7 @@ $card-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
         }
 
         &:hover .specialist-img {
-          border-color: $primary-color;
+          border-color: var(--primary-color);
           transform: scale(1.05);
         }
 
