--- a/src/app/pages/Doctors/Doctors.scss
+++ b/src/app/pages/Doctors/Doctors.scss
@@ -76,6 +76,7 @@ $box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
             .doctor-image {
                 width: 100%;
+                object-fit: contain;
                 height: 100%;
             }
 
